// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CombinedSearchProvider reads the context properly 1`] = `
<div>
  <p
    data-test-id="formValues"
  >
    {"text":"test text","sportsCategories":[],"targetGroups":[],"keywords":[]}
  </p>
  <p
    data-test-id="event-searchVariables"
  >
    {"xFullText":"test text","xOngoing":true,"start":"now","end":"","include":["keywords","location"],"keywordAnd":[],"keywordNot":[],"keywordOrSet1":["yso:p916","kulke:710","yso:p17018","yso:p1963","yso:p9824","yso:p965","yso:p6409","yso:p8781","yso:p26619","yso:p13035","yso:p2041"],"keywordOrSet2":[],"keywordOrSet3":[],"location":[],"sort":"end_time","eventType":"General","publisher":null,"publisherAncestor":null,"pageSize":10}
  </p>
  <p
    data-test-id="course-searchVariables"
  >
    {"xFullText":"test text","xOngoing":true,"start":"now","end":"","include":["keywords","location"],"keywordAnd":[],"keywordNot":[],"keywordOrSet1":["yso:p916","kulke:710","yso:p17018","yso:p1963","yso:p9824","yso:p965","yso:p6409","yso:p8781","yso:p26619","yso:p13035","yso:p2041"],"keywordOrSet2":[],"keywordOrSet3":[],"location":[],"sort":"end_time","eventType":"Course","superEvent":"none","publisher":null,"publisherAncestor":null,"pageSize":10}
  </p>
  <p
    data-test-id="venue-searchVariables"
  >
    {"xFullText":"test text","xOngoing":true,"start":"now","end":"","include":["keywords","location"],"keywordAnd":[],"keywordNot":[],"keywordOrSet1":["yso:p916","kulke:710","yso:p17018","yso:p1963","yso:p9824","yso:p965","yso:p6409","yso:p8781","yso:p26619","yso:p13035","yso:p2041"],"keywordOrSet2":[],"keywordOrSet3":[],"location":[],"sort":"end_time","eventType":"Course","superEvent":"none","publisher":null,"publisherAncestor":null,"pageSize":10}
  </p>
</div>
`;

exports[`CombinedSearchProvider reads the context properly 2`] = `
<div>
  <p
    data-test-id="formValues"
  >
    {"text":"test text","sportsCategories":["gym","playgrounds"],"targetGroups":[],"keywords":[]}
  </p>
  <p
    data-test-id="event-searchVariables"
  >
    {"xFullText":"test text","xOngoing":true,"start":"now","end":"","include":["keywords","location"],"keywordAnd":[],"keywordNot":[],"keywordOrSet1":["yso:p916","kulke:710","yso:p17018","yso:p1963","yso:p9824","yso:p965","yso:p6409","yso:p8781","yso:p26619","yso:p13035","yso:p2041"],"keywordOrSet2":["yso:p8504","yso:p8105"],"keywordOrSet3":[],"location":[],"sort":"end_time","eventType":"General","publisher":null,"publisherAncestor":null,"pageSize":10}
  </p>
  <p
    data-test-id="course-searchVariables"
  >
    {"xFullText":"test text","xOngoing":true,"start":"now","end":"","include":["keywords","location"],"keywordAnd":[],"keywordNot":[],"keywordOrSet1":["yso:p916","kulke:710","yso:p17018","yso:p1963","yso:p9824","yso:p965","yso:p6409","yso:p8781","yso:p26619","yso:p13035","yso:p2041"],"keywordOrSet2":["yso:p8504","yso:p8105"],"keywordOrSet3":[],"location":[],"sort":"end_time","eventType":"Course","superEvent":"none","publisher":null,"publisherAncestor":null,"pageSize":10}
  </p>
  <p
    data-test-id="venue-searchVariables"
  >
    {"xFullText":"test text","xOngoing":true,"start":"now","end":"","include":["keywords","location"],"keywordAnd":[],"keywordNot":[],"keywordOrSet1":["yso:p916","kulke:710","yso:p17018","yso:p1963","yso:p9824","yso:p965","yso:p6409","yso:p8781","yso:p26619","yso:p13035","yso:p2041"],"keywordOrSet2":["yso:p8504","yso:p8105"],"keywordOrSet3":[],"location":[],"sort":"end_time","eventType":"Course","superEvent":"none","publisher":null,"publisherAncestor":null,"pageSize":10}
  </p>
</div>
`;

exports[`CombinedSearchProvider reads the context properly 3`] = `
<div>
  <p
    data-test-id="formValues"
  >
    {"text":"","sportsCategories":[],"targetGroups":[],"organization":"testorg","keywords":[]}
  </p>
  <p
    data-test-id="event-searchVariables"
  >
    {"xFullText":"","xOngoing":true,"start":"now","end":"","include":["keywords","location"],"keywordAnd":[],"keywordNot":[],"keywordOrSet1":["yso:p916","kulke:710","yso:p17018","yso:p1963","yso:p9824","yso:p965","yso:p6409","yso:p8781","yso:p26619","yso:p13035","yso:p2041"],"keywordOrSet2":[],"keywordOrSet3":[],"location":[],"sort":"end_time","eventType":"General","publisher":"testorg","publisherAncestor":null,"pageSize":10}
  </p>
  <p
    data-test-id="course-searchVariables"
  >
    {"xFullText":"","xOngoing":true,"start":"now","end":"","include":["keywords","location"],"keywordAnd":[],"keywordNot":[],"keywordOrSet1":["yso:p916","kulke:710","yso:p17018","yso:p1963","yso:p9824","yso:p965","yso:p6409","yso:p8781","yso:p26619","yso:p13035","yso:p2041"],"keywordOrSet2":[],"keywordOrSet3":[],"location":[],"sort":"end_time","eventType":"Course","superEvent":"none","publisher":"testorg","publisherAncestor":null,"pageSize":10}
  </p>
  <p
    data-test-id="venue-searchVariables"
  >
    {"xFullText":"","xOngoing":true,"start":"now","end":"","include":["keywords","location"],"keywordAnd":[],"keywordNot":[],"keywordOrSet1":["yso:p916","kulke:710","yso:p17018","yso:p1963","yso:p9824","yso:p965","yso:p6409","yso:p8781","yso:p26619","yso:p13035","yso:p2041"],"keywordOrSet2":[],"keywordOrSet3":[],"location":[],"sort":"end_time","eventType":"Course","superEvent":"none","publisher":"testorg","publisherAncestor":null,"pageSize":10}
  </p>
</div>
`;
